--- a/portfolio/src/main/webapp/trips.html
+++ b/portfolio/src/main/webapp/trips.html
@@ -44,7 +44,7 @@
                 </p>
             </div>
         </div>
-        <div id="carouselExampleCaptions1" class="carousel slide center-col slideBack" data-ride="carousel">
+        <div id="carouselExampleCaptions1" class="carousel slide center-col slide-back" data-ride="carousel">
             <ol class="carousel-indicators">
                 <li data-target="#carouselExampleCaptions1" data-slide-to="0" class="active"></li>
                 <li data-target="#carouselExampleCaptions1" data-slide-to="1"></li>
@@ -88,7 +88,7 @@
                 </p>
             </div>
         </div>
-        <div id="carouselExampleCaptions2" class="carousel slide center-col slideBack" data-ride="carousel">
+        <div id="carouselExampleCaptions2" class="carousel slide center-col slide-back" data-ride="carousel">
             <ol class="carousel-indicators">
                 <li data-target="#carouselExampleCaptions2" data-slide-to="0" class="active"></li>
                 <li data-target="#carouselExampleCaptions2" data-slide-to="1"></li>
@@ -136,7 +136,7 @@
                 </p>
             </div>
         </div>
-        <div id="carouselExampleCaptions3" class="carousel slide center-col slideBack" data-ride="carousel">
+        <div id="carouselExampleCaptions3" class="carousel slide center-col slide-back" data-ride="carousel">
             <ol class="carousel-indicators">
                 <li data-target="#carouselExampleCaptions3" data-slide-to="0" class="active"></li>
                 <li data-target="#carouselExampleCaptions3" data-slide-to="1"></li>
