--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -187,9 +187,9 @@
             <a class="btn btn-dark" id="loginBtn">Login to comment</a>
         </div>
     </div>
-    <div id="commentForm" class="text-center padding-10-px">
+    <div id="commentFormDiv" class="text-center padding-10-px">
         <div class="media padding-10-px justify-center">
-            <form action="/data" method="POST" class="width-80-pc">
+            <form id="commentForm" method="POST" class="width-80-pc" enctype="multipart/form-data">
                 <div class="justify-center">
                     <div class="emoji-picker">
                         <input checked id="emoji1" type="radio" name="emoji" value="1" class="hide">
@@ -208,8 +208,10 @@
                     <div class='media-body'>
                         <input id="hiddenUser" name="name" type="hidden">
                         <input id="commentUser" disabled class="form-control margin-10-px">
-                        <textarea value="cool" required name="comment" class="form-control margin-10-px" rows="3" placeholder="Comment..."></textarea>
+                        <textarea required name="comment" class="form-control margin-10-px" rows="3" placeholder="Comment..."></textarea>
                     </div>
+                    <p>Upload an image:</p>
+                    <input type="file" name="image">
                 </div>
                 <div class="justify-center">
                     <input class="btn btn-dark" type="submit" />
