--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -195,8 +195,10 @@
                     <input id="commentUser" disabled class="form-control margin-10-top-bottom">
                     <textarea value="cool" required name="comment" class="form-control margin-10-top-bottom" rows="3" placeholder="Comment..."></textarea>
                 </div>
-                <p>Upload an image:</p>
-                <input type="file" name="image">
+                <div class="custom-file file-input">
+                    <input onchange="changeInputFile()" name="image" type="file" class="custom-file-input" id="inputFile" >
+                    <label id="inputFileLabel" class="custom-file-label" for="inputFile">Choose file</label>
+                </div>
                 <div class="justify-center">
                     <input class="btn btn-dark" type="submit" />
                 </div>
