Limit file upload to images only

--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -196,7 +196,7 @@
                     <textarea value="cool" required name="comment" class="form-control margin-10-top-bottom" rows="3" placeholder="Comment..."></textarea>
                 </div>
                 <div class="custom-file file-input">
-                    <input onchange="changeInputFile()" name="image" type="file" class="custom-file-input" id="inputFile" >
+                    <input onchange="changeInputFile()" name="image" type="file" class="custom-file-input" id="inputFile" accept="image/*">
                     <label id="inputFileLabel" class="custom-file-label" for="inputFile">Choose file</label>
                 </div>
                 <div class="justify-center">
